resources/monitoring/victoriametrics/base/vmcluster/httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmselect-ingress
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vmselect-vmcluster
            port:
              number: 8481
        path: /select/0/prometheus
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmui-ingress
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vmselect-vmcluster
            port:
              number: 8481
        path: /select/0/vmui
        pathType: Prefix
